compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:117:13: error: ‘cout’ was not declared in this scope
             cout<<msg.rendszam<<"\n";
             ^~~~
/main.cpp:117:13: note: suggested alternative:
In file included from /main.cpp:5:
/usr/include/c++/8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^~~~
/main.cpp: In function ‘int main()’:
/main.cpp:166:24: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for (int i=0; i<reader.dataArray.size(); i++)
                       ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:186:35: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
                     for(int j=0; j<reader.dataArray.size(); j++)
                                  ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:188:59: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                         if(reader.dataArray[j].currStoreId==i && reader.dataArray[j].currRouter==alaprouter )
/main.cpp:155:14: warning: unused variable ‘tovabbitott_e’ [-Wunused-variable]
         bool tovabbitott_e=true;
              ^~~~~~~~~~~~~
/main.cpp:261:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:278:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:140:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~